<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".config.password.PasswordConfigActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            style="@style/ActionBarTextView"
            android:text="@string/back"
            android:id="@+id/text_view_back" />

        <TextView
            style="@style/ActionBarTitle"
            android:text="@string/new_device"/>

        <TextView
            style="@style/ActionBarTextView"
            android:id="@+id/text_view_save"
            android:text="@string/save"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LinearLayoutHorizontalStyle">

        <TextView
            android:id="@+id/text_view_name"
            android:text="@string/label_password_actual"
            style="@style/TextViewStyle"
            android:textSize="14dp"/>

        <EditText
            style="@style/EditTextStyle"
            android:inputType="textPassword"
            android:id="@+id/edit_text_pass_actual" />

    </LinearLayout>

    <LinearLayout
        style="@style/LinearLayoutHorizontalStyle"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/label_password_new"
            style="@style/TextViewStyle"
            android:textSize="14dp"/>

        <EditText
            style="@style/EditTextStyle"
            android:inputType="textPassword"
            android:id="@+id/edit_text_pass_new" />

    </LinearLayout>

    <LinearLayout
        style="@style/LinearLayoutHorizontalStyle"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/label_password_confirm"
            style="@style/TextViewStyle"
            android:textSize="14dp"/>

        <EditText
            style="@style/EditTextStyle"
            android:inputType="textPassword"
            android:id="@+id/edit_text_pass_new_confirm" />

    </LinearLayout>

</LinearLayout>
