<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="br.inatel.icc.gigasecurity.gigamonitor.activities.DeviceFormActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            style="@style/ActionBarTextView"
            android:text="@string/back"
            android:id="@+id/text_view_back"/>



        <TextView
            style="@style/ActionBarTitle"
            android:text="@string/new_device"/>

        <TextView
            style="@style/ActionBarTextView"
            android:id="@+id/text_view_save"
            android:text="@string/save"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <LinearLayout
                style="@style/LinearLayoutHorizontalStyle">

                <TextView
                    android:id="@+id/text_view_name"
                    android:text="@string/name"
                    style="@style/TextViewStyle"/>

                <EditText
                    style="@style/EditTextStyle"
                    android:id="@+id/edit_text_device_form_name"
                    android:nextFocusForward="@+id/edit_text_device_form_serial"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout style="@style/LinearLayoutHorizontalStyle">

                <TextView
                    style="@style/TextViewStyle"
                    android:id="@+id/text_view_serial"
                    android:hint="@string/serial"
                    android:text="@string/serial" />

                <EditText
                    style="@style/EditTextStyle"
                    android:ems="8"
                    android:id="@+id/edit_text_device_form_serial"
                    android:nextFocusForward="@+id/edit_text_device_form_ip_address"
                    android:inputType="text" />

                <Switch
                    style="@style/Switch"
                    android:id="@+id/serial_checkbox"
                    android:theme="@style/GigaSwitch"/>

            </LinearLayout>

            <LinearLayout style="@style/LinearLayoutHorizontalStyle">

                <TextView
                    style="@style/TextViewStyle"
                    android:id="@+id/text_view_ip_address"
                    android:text="@string/ip" />

                <EditText
                    style="@style/EditTextStyle"
                    android:ems="8"
                    android:id="@+id/edit_text_device_form_ip_address"
                    android:digits="0123456789."
                    android:nextFocusForward="@+id/edit_text_device_form_domain"
                    android:inputType="numberDecimal" />

                <Switch
                    style="@style/Switch"
                    android:id="@+id/ip_checkbox"
                    android:theme="@style/GigaSwitch"/>

            </LinearLayout>

            <LinearLayout style="@style/LinearLayoutHorizontalStyle">

                <TextView
                    style="@style/TextViewStyle"
                    android:id="@+id/text_view_domain"
                    android:text="@string/domain" />

                <EditText
                    style="@style/EditTextStyle"
                    android:ems="8"
                    android:id="@+id/edit_text_device_form_domain"
                    android:nextFocusForward="@+id/tv_external_port"
                    android:inputType="text" />

                <Switch
                    style="@style/Switch"
                    android:id="@+id/domain_checkbox"
                    android:theme="@style/GigaSwitch"/>

            </LinearLayout>

            <LinearLayout style="@style/LinearLayoutHorizontalStyle">

                <TextView
                    style="@style/TextViewStyle"
                    android:id="@+id/tv_port"
                    android:text="@string/device_port" />

                <EditText
                    style="@style/EditTextStyle"
                    android:id="@+id/edit_text_device_form_port"
                    android:text="34567"
                    android:digits="0123456789"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout style="@style/LinearLayoutHorizontalStyle">

                <TextView
                    style="@style/TextViewStyle"
                    android:id="@+id/tvPort"
                    android:text="@string/user" />

                <EditText
                    style="@style/EditTextStyle"
                    android:id="@+id/edit_text_device_form_username"
                    android:text="admin"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout style="@style/LinearLayoutHorizontalStyle">

                <TextView
                    style="@style/TextViewStyle"
                    android:id="@+id/tvPassword"
                    android:text="@string/password" />

                <EditText
                    style="@style/EditTextStyle"
                    android:id="@+id/edit_text_device_form_password"
                    android:inputType="textPassword" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
