<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.inatel.icc.gigasecurity.gigamonitor.config.dns.dnsConfigActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center_horizontal">

        <TextView
            style="@style/ActionBarTextView"
            android:text="@string/back"
            android:layout_width="90dp"
            android:id="@+id/text_view_back"/>

        <TextView
            style="@style/ActionBarTitle"
            android:layout_width="90dp"
            android:text="DNS"/>

        <TextView
            style="@style/ActionBarTextView"
            android:id="@+id/text_view_save"
            android:layout_width="60dp"
            android:text="@string/save"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LinearLayoutHorizontalStyle">

        <TextView
            android:id="@+id/tv_dns_primary_address"
            android:text="@string/label_dns_primary"
            style="@style/TextViewStyle"/>

        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/edit_text_dns_primary_address"
            android:inputType="number"
            android:digits="0123456789."
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LinearLayoutHorizontalStyle">

        <TextView
            android:id="@+id/textview_dns_secondary_address"
            android:text="@string/label_dns_secondary"
            style="@style/TextViewStyle"/>

        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/edit_text_dns_secondary_address"
            android:inputType="number"
            android:digits="0123456789."
            android:singleLine="true"/>

    </LinearLayout>


    <CheckBox
        android:id="@+id/checkbox_dns_enabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_alignParentEnd="true"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/checkbox_dns_dhcp_enabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="visibi"
        android:layout_toEndOf="@id/checkbox_dns_enabled"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/checkbox_dns_enabled"
        android:checked="false"
        android:visibility="gone" />

</LinearLayout>
