<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.inatel.icc.gigasecurity.gigamonitor.config.set_over_net.set_over_netConfigActivity">

    <TextView
        android:id="@+id/text_view_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/edit_text_set_over_net_ip_user_name"
        android:hint="@string/name"
        android:text="admin"
        android:layout_below="@+id/text_view_username"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/tvPassword"
        android:layout_below="@+id/edit_text_set_over_net_ip_user_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/edit_text_set_over_net_ip_password"
        android:hint="@string/password"
        android:password="true"
        android:inputType="textPassword"
        android:layout_below="@+id/tvPassword"
        />

    <TextView
        android:id="@+id/text_view_ip_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_set_over_net_ip_password"
        android:text="@string/ip"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />

    <EditText
        android:id="@+id/edit_text_set_over_net_ip_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_ip_address"
        android:hint="0.0.0.0"
        android:inputType="number"
        android:digits="0123456789."
        android:singleLine="true"
         />


    <TextView
        android:id="@+id/textview_set_over_net_mask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_ethernet_mask"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/edit_text_set_over_net_ip_address"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/edit_text_set_over_net_mask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_set_over_net_mask"
        android:hint="0.0.0.0"
        android:inputType="number"
        android:digits="0123456789."
        android:singleLine="true"
        />

    <TextView
        android:id="@+id/textview_set_over_net_gateway"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_ethernet_gateway"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/edit_text_set_over_net_mask"
     />

    <EditText
        android:id="@+id/edit_text_set_over_net_gateway"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_set_over_net_gateway"
        android:hint="0.0.0.0"
        android:inputType="number"
        android:digits="0123456789."
        android:singleLine="true"
        android:layout_centerVertical="true"
 />


</RelativeLayout>
