<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.inatel.icc.gigasecurity.gigamonitor.config.upnp.UpnpConfigActivity">

    <TextView
        android:id="@+id/text_view_upnp_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margintop_config_item"
        android:text="@string/label_upnp_warning"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <CheckBox
        android:id="@+id/check_box_cloud_enable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/text_view_upnp_warning"
        android:layout_centerHorizontal="true"
        android:text="@string/enable" />

    <CheckBox
        android:id="@+id/check_box_upnp_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_upnp_warning"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@id/check_box_cloud_enable"
        android:layout_toRightOf="@id/check_box_cloud_enable"
        android:text="@string/state"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_view_http_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_view_upnp_warning"
        android:layout_alignStart="@+id/text_view_upnp_warning"
        android:layout_below="@+id/check_box_cloud_enable"
        android:layout_marginTop="@dimen/margintop_config_item"
        android:text="@string/label_upnp_http_port"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/edit_text_upnp_http_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_view_http_port"
        android:ems="10"
        android:hint="@string/label_upnp_http_port"
        android:inputType="number" />

    <TextView
        android:id="@+id/text_view_media_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_view_upnp_warning"
        android:layout_alignStart="@+id/text_view_upnp_warning"
        android:layout_below="@+id/edit_text_upnp_http_port"
        android:layout_marginTop="@dimen/margintop_config_item"
        android:text="@string/label_upnp_media_port"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/edit_text_upnp_media_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_media_port"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/label_upnp_media_port"
        android:inputType="number" />

    <TextView
        android:id="@+id/text_view_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_view_upnp_warning"
        android:layout_alignStart="@+id/text_view_upnp_warning"
        android:layout_below="@+id/edit_text_upnp_media_port"
        android:layout_marginTop="@dimen/margintop_config_item"
        android:text="@string/label_upnp_port"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/edit_text_upnp_mobile_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_port"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/label_upnp_port"
        android:inputType="number" />

    <TextView
        android:id="@+id/text_view_upnp_arg0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_view_upnp_warning"
        android:layout_alignStart="@+id/text_view_upnp_warning"
        android:layout_below="@+id/edit_text_upnp_mobile_port"
        android:layout_marginTop="@dimen/margintop_config_item"
        android:text="Arg0"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edit_text_upnp_arg0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_upnp_arg0"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="Giga"
        android:inputType="text"
        android:visibility="gone" />

</RelativeLayout>
